--- a/test_42cc/templates/user_info/user_data_hc.html
+++ b/test_42cc/templates/user_info/user_data_hc.html
@@ -10,19 +10,19 @@
 
   <div class="row">
     <div class="col-md-6">
-      <p>Name: {{ user.name }}</p>
-      <p>Last name: {{ user.last_name }}</p>
-      <p>Date of birth: {{ user.date_of_birth }}</p>
+      <p>Name: Konstantin</p>
+      <p>Last name: Rodin</p>
+      <p>Date of birth: 23/03/1980</p>
       <br>
-      <p>Bio: {{ user.bio }}</p>
+      <p>Bio: From my youth I wanted to code. Now I code every day)))</p>
     </div>
     
     <div class="col-md-6">
       <p>Contacts</p>
-      <p>Email: {{ user.email }}</p>
-      <p>Jabber: {{ user.jabber }}</p>
-      <p>Skype: {{ user.skype }}</p>
-      <p>Other contacts: {{ user.other_contacts }}</p>
+      <p>Email: krodinv@gmail.com</p>
+      <p>Jabber: krodinv@42cc.co</p>
+      <p>Skype: inbox011</p>
+      <p>Other contacts: +380 68 240 0 231</p>
     </div>
   </div>
 </div>
