--- a/test_42cc/templates/user_info/user_data.html
+++ b/test_42cc/templates/user_info/user_data.html
@@ -27,4 +27,13 @@
   </div>
 </div>
 
+<div class="request">
+  <a href="{% url 'requests' %}">requests</a>
+  {% if new_requests %}
+        <h5> {{ new_requests }} new request{{ new_requests|pluralize }}.</h5>
+      {% else %}
+        <h5>No new requests.</h5>
+      {% endif %}
+</div>
+
 {% endblock %}
