ajax for http requests

--- a/test_42cc/templates/user_info/base.html
+++ b/test_42cc/templates/user_info/base.html
@@ -11,4 +11,10 @@
  {% block content %}{% endblock %}
 
 </body>
+
+{% block add_script %}
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="{% static 'ajax_http_requests.js' %}"></script>
+{% endblock %}
+
 </html>
