--- a/test_42cc/static/style.css
+++ b/test_42cc/static/style.css
@@ -5,3 +5,9 @@ body {
 .request {
     margin-left: 30px;
 }
+
+#photo {
+    background-color: green;
+    min-height: 200px;
+    width: 200px;
+}
