--- a/test_42cc/static/style.css
+++ b/test_42cc/static/style.css
@@ -1,5 +1,10 @@
 body {
     background-color: #f4f6f9;
+    font-size: large;
+}
+
+img {
+
 }
 
 .request {
@@ -7,7 +12,5 @@ body {
 }
 
 #photo {
-    background-color: green;
-    min-height: 200px;
-    width: 200px;
+   
 }
