--- a/test_42cc/templates/user_info/user_form.html
+++ b/test_42cc/templates/user_info/user_form.html
@@ -10,7 +10,9 @@
 
   <div class="row">
     <div class="col-md-6">
-      <p>Name: {{ user.name }}</p>
+<form>
+      Name: <input type="text" name="name" placeholder="{{ user.name }}">
+</form>
       <p>Last name: {{ user.last_name }}</p>
       <p>Date of birth: {{ user.date_of_birth }}</p>
       <br>
