--- a/test_42cc/static/style.css
+++ b/test_42cc/static/style.css
@@ -3,8 +3,17 @@ body {
     font-size: large;
 }
 
-img {
+.login {
+    margin-top: 15px;
 
+}
+
+.head {
+    height: 80px;
+
+    /*display: inline-block;*/
+    /*float: none;*/
+    vertical-align: middle;
 }
 
 .request {
