--- a/test_42cc/templates/user_info/user_data.html
+++ b/test_42cc/templates/user_info/user_data.html
@@ -2,9 +2,12 @@
 
 {% block content %}
  <div class="container">
-  <div class="row">
+  <div class="row head">
     <div class="col-md-9">
       <h3>42 Coffee Cups Test Assignment</h3>
+    </div>
+    <div class="col-md-3 text-center login">
+      <a href="{% url 'login' %}"" class="">Login</a>
     </div>
   </div>
 
