AJAX for form. In process

--- a/test_42cc/templates/user_info/base.html
+++ b/test_42cc/templates/user_info/base.html
@@ -15,6 +15,7 @@
 {% block add_script %}
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="{% static 'ajax_http_requests.js' %}"></script>
+    <script src="{% static 'edit_form.js' %}"></script>
 {% endblock %}
 
 </html>
