--- a/test_42cc/static/style.css
+++ b/test_42cc/static/style.css
@@ -14,6 +14,7 @@ body {
     /*display: inline-block;*/
     /*float: none;*/
     vertical-align: middle;
+    margin-bottom: 30px;
 }
 
 .request {
@@ -22,4 +23,21 @@ body {
 
 #photo {
    
+}
+
+.other-info {
+    height: 200px;
+    display: block;
+}
+
+.info-block {
+    margin-top: 40px;
+}
+
+.control-label.other-contacts {
+    text-align: left;
+}
+
+hr {
+    border-top: 1px solid black;
 }
